api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: collectors-channel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-deployment
  template:
    metadata:
      labels:
        app: api-deployment
        version: "1.3.0"
    spec:
      containers:
        - name: collectors-channel-api
          image: paulosalgado/collectors-channel-api:1.3.0
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 5000
