api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: collectors-channel
spec:
  selector:
    app: api-deployment
  ports:
    - name: http-port
      port: 5000
      targetPort: http-port
      protocol: TCP
