api/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-virtualservice
  namespace: collectors-channel
spec:
  hosts:
    - api-collectors.$DOMAIN
  gateways:
    - istio-custom/default-gateway
  http:
    - route:
        - destination:
            host: api-service
            port: 
              number: 5000
          weight: 100
